Fixed styles of header logo on mobile

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -256,8 +256,8 @@ td{
         overflow: auto;
     }
     .logo {
-        width: 60%;
-        margin: 20% 20% 5% 20%;
+        width: 56%;
+        margin: 30% 22% 10% 22%;
     }
     .content {
         width: 84%;
@@ -324,9 +324,9 @@ td{
         margin: 15px 0 0 20px;
     }
     .sticky nav {
-        float: left;
-        width: 70%;
-        margin: 45px 0 0 3%;
+        float: right;
+        width: 68%;
+        margin: 45px 1% 0 2%;
     }
     .sticky ul{
         margin: 0;
